@@ -150,8 +150,8 @@ SUBROUTINE setup_nscf ( newgrid, xq )
   ! ... "irreducible_BZ" computes the missing k-points.
   !
   if(.not.elph_mat) &
-  CALL irreducible_BZ (nrot, s, nsymq, minus_q, at, bg, npk, nkstot, xk, wk, &
-                       t_rev)
+  CALL irreducible_BZ (nrot, s, nsymq, minus_q, magnetic_sym, &
+                       at, bg, npk, nkstot, xk, wk, t_rev)
   !
   ! ... add k+q to the list of k
   !
